--- a/backend/package.json
+++ b/backend/package.json
@@ -11,26 +11,28 @@
     "db:seed": "tsx src/database/seed.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "better-sqlite3": "^9.2.2",
-    "rss-parser": "^3.13.0",
-    "node-cron": "^3.0.3",
     "axios": "^1.6.2",
+    "better-sqlite3": "^9.2.2",
+    "chardet": "^2.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "rss-parser": "^3.13.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20.10.4",
     "@types/better-sqlite3": "^7.6.8",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.7",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2"
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
   "keywords": [
     "express",
