--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,16 @@
 # Server Configuration
 PORT=3001
-NODE_ENV=development
+CORS_ORIGIN=http://localhost:5173
 
-# Database
-DB_PATH=./data/sports.db
+# Database Configuration
+DATABASE_URL=sqlite:./data/sports.db
 
 # Ollama Configuration
 OLLAMA_URL=http://localhost:11434
-SPORTS_AGENT_MODEL=llava:13b
-REASONING_AGENT_MODEL=hir0rameel/qwen-claude:latest
 
-# RSS Configuration
-RSS_FETCH_INTERVAL=*/30 * * * * # Every 30 minutes
-RSS_MAX_ARTICLES_PER_FEED=50
+# Web Search Configuration (Optional - for production use)
+# SEARCH_API_KEY=your_search_api_key_here
+# SEARCH_API_URL=https://serpapi.com/search
 
-# CORS
-CORS_ORIGIN=http://localhost:5173
-
-# Logging
-LOG_LEVEL=info
+# RSS Fetching Configuration
+RSS_FETCH_INTERVAL=0 */2 * * *
